fix: unaligned calenders in multi-month view

--- a/src/components/og-calendar/og-calendar.scss
+++ b/src/components/og-calendar/og-calendar.scss
@@ -9,6 +9,7 @@
 }
 
 .calendar__container {
+    vertical-align: top;
     display: inline-block;
 
     & + & {
